--- a/CCBQuickCategorizerV2/CCBQuickCategorizerV2.csproj
+++ b/CCBQuickCategorizerV2/CCBQuickCategorizerV2.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +13,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\QuickCategorizeDLV2\QuickCategorizeDLV2.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="us-dollar-16.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
