--- a/CCBQuickCategorizer/CCBQuickCategorizer.csproj
+++ b/CCBQuickCategorizer/CCBQuickCategorizer.csproj
@@ -98,7 +98,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="multitool.png" />
+    <Content Include="us-dollar-16.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
