--- a/CCBQuickCategorizerV2/CCBQuickCategorizerV2.csproj
+++ b/CCBQuickCategorizerV2/CCBQuickCategorizerV2.csproj
@@ -4,7 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <Version>1.0.7.0</Version>
+    <Version>1.0.7.1</Version>
+    <StartupObject>CCBQuickCategorizerV2.Program</StartupObject>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
