--- a/CCBQuickCategorizerV2/CCBQuickCategorizerV2.csproj
+++ b/CCBQuickCategorizerV2/CCBQuickCategorizerV2.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.20348.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <Version>1.0.8.0</Version>
+    <Version>1.0.9.0</Version>
     <StartupObject>CCBQuickCategorizerV2.Program</StartupObject>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
   </PropertyGroup>
